[package]
name = "LegatusBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.10"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
  
